switch_touchgfx/TouchGFX/output_CompileSimulator.log
Converting images
Compiling gui/src/main_screen/MainPresenter.cpp
Compiling gui/src/main_screen/MainView.cpp
Compiling gui/src/model/Model.cpp
Compiling generated/gui_generated/src/common/FrontendApplicationBase.cpp
Compiling simulator/main.cpp
gui/src/model/Model.cpp:3:22: fatal error: cmsis_os.h: No such file or directory
 #include <cmsis_os.h>
                      ^
compilation terminated.
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/model/Model.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/model/Model.o] Error 1
make[2]: *** Waiting for unfinished jobs....
gui/src/main_screen/MainView.cpp: In member function 'void MainView::clockTimerHandlerCallback()':
gui/src/main_screen/MainView.cpp:21:66: error: 'hour' was not declared in this scope
   Unicode::snprintf(clockNumBuffer1, CLOCKNUMBUFFER1_SIZE, "%d", hour);
                                                                  ^~~~
gui/src/main_screen/MainView.cpp:22:66: error: 'minute' was not declared in this scope
   Unicode::snprintf(clockNumBuffer2, CLOCKNUMBUFFER2_SIZE, "%d", minute);
                                                                  ^~~~~~
gui/src/main_screen/MainView.cpp:23:7: error: 'hr12' was not declared in this scope
   if (hr12)
       ^~~~
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/main_screen/MainView.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/main_screen/MainView.o] Error 1
simulator/gcc/Makefile:182: recipe for target 'generate_assets' failed
make[1]: *** [generate_assets] Error 2
simulator/gcc/Makefile:40: recipe for target 'all' failed
make: *** [all] Error 2
